src/test/deca/context/valid/method_return_subtype.deca
/*
    Description : méthode de type Object retournant un sous type

    Résultat : OK (règle 3.28 assign_compatible)
*/
class A{
}
class B extends A{}

class C extends B{}

class D{
    Object e(){
        C r = new C();
        return r;
    }
}
