src/test/deca/context/invalid/float_class_name.deca
/*
    Description : Classe nommée float

    Résultat : Erreur contextuelle (règle 1.3 condition implicite)
*/
class float{}
